force-app/main/default/objects/Company_Level__c/Company_Level__c.object-meta.xml
<CustomObject>
    <description>Stores the levels of the company and the corresponding sales profile who heads the level</description>
    <label>Company Level</label>
    <nameField>
        <displayFormat>L-{000}</displayFormat>
        <label>Company Levels Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>