force-app/main/default/objects/Company_Level__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to certification from company level record.</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Company Levels</relationshipLabel>
    <relationshipName>Company_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>