force-app/main/default/objects/Company_Level__c/fields/Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_Name__c</fullName>
    <description>Stores the name of the level (The way the organisation is divided at the horizontal level)</description>
    <label>Level Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>