force-app/main/default/objects/Company_Level__c/fields/Level_Value__c.field-meta.xml
<CustomField>
    <fullName>Level_Value__c</fullName>
    <description>Stores the position of the sales rep at the corresponding level</description>
    <label>Level Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>