force-app/main/default/objects/Company_Level__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the sales rep profile the particular level value is associated with</description>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Company Levels</relationshipLabel>
    <relationshipName>Company_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>